data/derived/sp14/progs/unify/prog1569.ml.out
Characters 94-125:
  ((clone 0 (len1-len2)) @ l2),l1;;
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type unit
